[tool.poetry]
authors = ["Leon Bowie <leon@bowie-co.nz>"]
description = "Asyncpixel"
documentation = "https://aiomcstats.readthedocs.io"
homepage = "https://github.com/Obsidion-dev/aiomcstats"
license = "GPLv3"
name = "aiomcstats"
readme = "README"
repository = "https://github.com/Obsidion-dev/aiomcstats"
version = "1.0.0"

[tool.poetry.dependencies]
dnspython = "^2.1.0"
pydantic = "^1.7.3"
python = "^3.7"

[tool.poetry.dev-dependencies]
Pygments = "^2.7.4"
Sphinx = "^3.4.3"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.4"}
darglint = "^1.6.0"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
mypy = "^0.790"
pep8-naming = "^0.11.1"
pre-commit = "^2.9.3"
pre-commit-hooks = "^3.4.0"
pytest = "^6.2.2"
reorder-python-imports = "^2.3.6"
safety = "^1.10.3"
sphinx-autobuild = "^2020.9.1"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"
typeguard = "^2.10.0"

[tool.poetry.urls]
Changelog = "https://github.com/Obsidion-dev/aiomcstats/releases"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry>=1.1.0"]
